[gd_scene load_steps=14 format=2]

[ext_resource path="res://plain-circle.png" type="Texture" id=1]
[ext_resource path="res://CelestialBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://Trail2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=4]
[ext_resource path="res://muzzle_04.png" type="Texture" id=5]
[ext_resource path="res://CircleProgress.tscn" type="PackedScene" id=6]
[ext_resource path="res://Satellite10.gd" type="Script" id=7]
[ext_resource path="res://arrow.png" type="Texture" id=8]
[ext_resource path="res://BuffArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://turret.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 48.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="CircleShape2D" id=3]
radius = 47.0106

[node name="Satellite10" instance=ExtResource( 2 )]
script = ExtResource( 7 )
mass = 0.1

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="BuffArea" parent="." index="1" instance=ExtResource( 9 )]

[node name="Sprite" type="Sprite" parent="." index="2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="." index="3"]
modulate = Color( 0.192157, 0.4, 0.529412, 1 )
position = Vector2( 84, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Turret" parent="." index="4" instance=ExtResource( 4 )]
visible = false
scale = Vector2( 0.8, 0.8 )

[node name="Trail2D" parent="." index="5" instance=ExtResource( 3 )]
remove_time = 12.0
min_segment = 40.0

[node name="Line2D" parent="Trail2D" index="0"]
width = 20.0

[node name="CircleProgress" parent="." index="6" instance=ExtResource( 6 )]
margin_left = -64.0
margin_top = -64.0
margin_right = 448.0
margin_bottom = 448.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="HurtBox" type="Area2D" parent="." index="7"]
collision_layer = 5
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
shape = SubResource( 2 )

[node name="Flame" type="Sprite" parent="." index="8"]
visible = false
show_behind_parent = true
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
offset = Vector2( 400, 0 )

[node name="Arrow" type="Sprite" parent="." index="9"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
offset = Vector2( 1000, 0 )

[node name="BuffDetector" type="Area2D" parent="." index="10"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuffDetector" index="0"]
visible = false
shape = SubResource( 3 )

[editable path="Trail2D"]
